--- a/Entendendo o DOM/index.html
+++ b/Entendendo o DOM/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -14,5 +14,13 @@
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar <strong>DOM</strong> em JavaScript</p>
     <div>Clique em mim</div>
+    <div class="box" id="box">
+        oi...
+    </div>
+
+
+
+    <script src="script.js"></script>
 </body>
+
 </html>
