--- a/Somando Valores/index.html
+++ b/Somando Valores/index.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somando Valores</title>
+    <link rel="stylesheet" href="somandoValores.css">
 </head>
 
 <body>
-    <h1>Somando Valores</h1>
-    <input type="text" name="txt-1" id="txt-1" placeholder="Digite o primeiro número">
-    <input type="text" name="txt-2" id="txt-2" placeholder="Digite o segundo número">
-    <div id="res">Resultado</div>
-    <input type="button" value="somar" onclick="somar()">
+    <div class="container">
+        <h1>Somando Valores</h1>
+        <input type="text" name="txt-1" id="txt-1" placeholder="Digite o primeiro número">
+        <input type="text" name="txt-2" id="txt-2" placeholder="Digite o segundo número">
+        <div id="res">Resultado</div>
+        <input type="button" value="somar" onclick="somar()">
+    </div>
     <script src="somandoValores.js"></script>
 </body>
 
